// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonLinkBox /> renders ButtonLinkBox 1`] = `
<div
  className="mfui-button-link-box mfui-button-link-box_h-align_center custom-class root-class"
  data-root="value"
>
  <div
    className="mfui-button-link-box__row"
  >
    <Button
      className="button-class"
      href="button-url"
      target="_self"
      theme="purple"
    >
      button title
    </Button>
  </div>
  <div
    className="mfui-button-link-box__row"
  >
    <TextLink
      className="link-class"
      color="blue"
      href="link-url"
      target="_blank"
      underlineStyle="solid"
      underlineVisibility="always"
    >
      link title
    </TextLink>
  </div>
</div>
`;

exports[`<ButtonLinkBox /> renders ButtonLinkBox with download links 1`] = `
<div
  className="mfui-button-link-box mfui-button-link-box_h-align_center custom-class root-class"
  data-root="value"
>
  <div
    className="mfui-button-link-box__row"
  >
    <Button
      className="button-class"
      download={true}
      href="button-url"
      target="_self"
      theme="purple"
    >
      button title
    </Button>
  </div>
  <div
    className="mfui-button-link-box__row"
  >
    <TextLink
      className="link-class"
      color="blue"
      download={true}
      href="link-url"
      target="_blank"
      underlineStyle="solid"
      underlineVisibility="always"
    >
      link title
    </TextLink>
  </div>
</div>
`;

exports[`<ButtonLinkBox /> renders ButtonLinkBox without button 1`] = `
<div
  className="mfui-button-link-box mfui-button-link-box_h-align_center custom-class root-class"
  data-root="value"
>
  <div
    className="mfui-button-link-box__row"
  >
    <TextLink
      className="link-class"
      color="blue"
      href="link-url"
      target="_blank"
      underlineStyle="solid"
      underlineVisibility="always"
    >
      link title
    </TextLink>
  </div>
</div>
`;

exports[`<ButtonLinkBox /> renders ButtonLinkBox without link 1`] = `
<div
  className="mfui-button-link-box mfui-button-link-box_h-align_center custom-class root-class"
  data-root="value"
>
  <div
    className="mfui-button-link-box__row"
  >
    <Button
      className="button-class"
      href="button-url"
      target="_self"
      theme="purple"
    >
      button title
    </Button>
  </div>
</div>
`;
